# qkd-plugins-strongswan

./: .gitignore  LICENSE.txt  Makefile.am  README.md  configure.ac
scripts/: build_strongswan.sh  clean.sh
src/: Makefile.am
src/qkd/: Makefile.am  qkd_etsi_adapter.c  qkd_etsi_adapter.h  qkd_kex.c  qkd_kex.h  qkd_plugin.c  qkd_plugin.h
src/qkd-kem/: Makefile.am  qkd_kem.c  qkd_kem.h  qkd_kem_plugin.c  qkd_kem_plugin.h
